--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+<!-- Without viewport tag -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>No Viewport Example</title>
 </head>
 <body>
-    
+    <h1>This is a test page</h1>
+    <p>The content might appear very small on mobile devices.</p>
 </body>
 </html>
