--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!-- Without viewport tag -->
+<!-- With viewport tag -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>No Viewport Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Viewport Example</title>
 </head>
 <body>
-    <h1>This is a test page</h1>
-    <p>The content might appear very small on mobile devices.</p>
+    <h1>This is a responsive page</h1>
+    <p>The content adjusts to fit the screen width.</p>
 </body>
 </html>
